--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,15 +14,14 @@
         <h1>Quara Post</h1>
         <% for(post of posts) { %>
             <div class="post">
-                <h3 class="username"> @<%= post.username %>
-                </h3>
-                <h4 class="content">
-                    <%= post.content %>
-                </h4>
+                <h3 class="username"> @<%= post.username %></h3>
+                <h4 class="content"> <%= post.content %> </h4>
+                <button class="innerbtn"><a href="http://localhost:8080/posts/<%= post.id%>">See in Detail</a></button>
             </div>
             <% } %>
+
                 <br>
-                <button><a href="http://localhost:8080/posts/new"> New Post</a></button>
+                <button class="outerbtn"><a href="http://localhost:8080/posts/new"> New Post</a></button>
     </div>
 </body>
 
