--- a/views/show.ejs
+++ b/views/show.ejs
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Post in Detail</title>
-    <link rel="stylesheet" href="show.css">
+    <link rel="stylesheet" href="/show.css">
 </head>
 <body>
-    <h2>Here are your post in detail</h2>
-    <% if (post) { %>
-        <p> post id : <%= post.id %></p>
-        <div class="post">
-            <h3> @<%= post.username %></h3>
-            <h4> <%= post.content %></h4>
-        </div>
-    <% } else { %>
-        <p>Post not found</p>
-    <% } %>
+    <div class="container">
+
+        <h2>Here are your post in detail</h2>
+        <% if (post) { %>
+            <p> post id : <%= post.id %></p>
+            <div class="post">
+                <h3> @<%= post.username %></h3>
+                <h4> <%= post.content %></h4>
+            </div>
+            <% } else { %>
+                <p>Post not found</p>
+                <% } %>
+    </div>
 </body>
 </html>
