--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,10 @@
             <div class="post">
                 <h3 class="username"> @<%= post.username %></h3>
                 <h4 class="content"> <%= post.content %> </h4>
-                <button class="innerbtn"><a href="http://localhost:8080/posts/<%= post.id%>">See in Detail</a></button>
+              <div class="innerbtns">
+                  <button class="innerbtn"><a href="http://localhost:8080/posts/<%= post.id%>">See in Detail</a></button>
+                  <button class="innerbtn"><a href="http://localhost:8080/posts/<%= post.id%>/edit">Edit Post</a></button>
+                </div>
             </div>
             <% } %>
 
