--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,7 @@
+body{
+    background-color:#d3cfcf;
+}
+
 *{
     margin: 5px;
     padding: 5px;
@@ -49,4 +53,13 @@ a {
     padding: 0px;
     display: flex;
     justify-content: right;  
+}
+
+.but{
+    text-decoration: none;
+    color: aliceblue;
+    font-weight: 700; 
+    background-color: #B92B27;
+    height: 30px;
+    width: 120px; 
 }
